@startuml

package app.config {
    class HibernateConfig {
        + configure()
        + getEntityManagerFactory(): EntityManagerFactory
    }
}

package app.entities {
    class Movie {
        + Long id
        + String title
        + String overview
        + Date release_date
        + double vote_average

    }
}

package app.exceptions {
    class ApiException {
        + String message

        + ApiException(String message)
    }
}

package app.persistence.dtos {
    class MovieDTO {
        + Long id
        + String title
        + String overview
        + Date release_date
        + double vote_average
        + boolean adult

    }
}

package app.persistence.dao {
    interface IDAO<T> {
        + save(T dto): T
        + findById(long id): Optional<T>
        + findAll(): List<T>
        + update(T dto): T
        + delete(int id): void
    }

    class MovieDAO {
        + save(MovieDTO dto): MovieDTO
        + findById(long id): Optional<MovieDTO>
        + findAll(): List<MovieDTO>
        + update(MovieDTO dto): MovieDTO
        + delete(int id): void
    }
}

package app.services {
    class MovieService {
        + getMovieById(String id): MovieDTO
        + getMoviesByTitle(String title): List<MovieDTO>
        + getMoviesByOverview(String overview): List<MovieDTO>
        + getMoviesByReleaseDate(String releaseDate): List<MovieDTO>
        + getLanguageMoviesInLastYears(int years, String language): List<MovieDTO>
    }
}

package app.utils {
    class Utils {
        + static getPropertyValue(String propName, String resourceName): String
    }
}

package app {
    class Main {
        + main(String[] args): void
        + populateDataBase(MovieService ms, MovieDAO movieDAO): void
        + runManualTesting(MovieService ms): void
    }
}

MovieService --* MovieDTO
MovieService  ..> ApiException : "throws"
Main --> MovieService : "uses"
HibernateConfig --o Main
MovieDAO --> Movie : "persists"
MovieDAO --> MovieDTO : "converts to"
Utils ..> ApiException : "throws"
IDAO <|.. MovieDAO

@enduml
